<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.example.myapplication.EditSiswaDatabaseUpdateActivity" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/value15"
        tools:context=".EditSiswaDatabaseUpdateActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/value10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_data_siswa"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/icon_delete"
                android:onClick="onClick"
                android:src="@drawable/ic_baseline_delete" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/ivEditProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/value15"
            android:background="@color/colorOldGrey"
            android:contentDescription="@string/image_profile"
            android:onClick="onClick" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value5"
            android:layout_marginBottom="@dimen/value5"
            android:autofillHints="@string/nama_siswa"
            android:hint="@string/nama_siswa"
            android:inputType="textCapWords"
            android:text='@={activity.nama}' />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value5"
            android:layout_marginBottom="@dimen/value5"
            android:autofillHints="@string/sekolah"
            android:hint="@string/sekolah"
            android:inputType="textCapWords"
            android:text='@={activity.sekolah}' />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value5"
            android:layout_marginBottom="@dimen/value5"
            android:autofillHints="@string/gender"
            android:hint="@string/gender"
            android:inputType="textCapWords"
            android:text='@={activity.gender}' />

        <Button
            android:id="@+id/buttonUpdateSiswa"
            android:layout_width="@dimen/value150"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/value10"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="onClick"
            android:text="@string/update"
            android:textAllCaps="false" />


    </LinearLayout>
</layout>

